# alice-lisp

./: CHANGELOG.md  alicelisp.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.4/: alicelisp-0.1.0.0-inplace.conf  package.cache  roselang-0.1.0.0-inplace.conf
src/Alice/: Interpretor.hs  Parser.hs
